Fix subtle misalignment issue

--- a/test/RowInputUI.css
+++ b/test/RowInputUI.css
@@ -192,6 +192,7 @@ span.infotext {
     -ms-flex-direction: row;
     -webkit-flex-direction: row;
     flex-direction: row;
+    align-items: center;
 }
 
     .TopicHeader .header-right, .TopicHeader .header-left {
